IGNITE-15884 Make TableIndexConfigurationSchema polymorphic (#445)